# ocaml-etl-pipeline

./: .env  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh  postCreate.sh
.github/: ci.yml
.github/workflows/: main.yml
docs/: original_description.md
dune_project/: dune-project
dune_project/lib/: dune
dune_project/test/: dune
etl/: .ocamlformat  dune-project  etl.opam
etl/_coverage/: index.html
etl/_coverage/lib/pure/: csv_parser.ml.html  process.ml.html
etl/lib/: dune
etl/lib/impure/: env.ml  io.ml  read.ml
etl/lib/pure/: csv_parser.ml  debug.ml  helpers.ml  process.ml  schemas.ml
etl/test/: csv_parser_test.ml  dune  process_test.ml  test.ml  test_csv_parser.ml  test_process.ml  testables.ml
etl_pipeline/: dune-project
etl_pipeline/lib/: dune
etl_pipeline/test/: dune
