(lang dune 3.17)

(name etl)

(generate_opam_files true)

(source
 (github gabrielonishi/ocaml-etl-pipeline))

(authors "Gabriel Onishi <gabrielhso@al.insper.edu.br>")

(maintainers "Gabriel Onishi <gabrielhso@al.insper.edu.br>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name etl)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml csv dotenv)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
